--- a/package.json
+++ b/package.json
@@ -11,10 +11,12 @@
     "generate-pwa-assets": "pwa-assets-generator"
   },
   "dependencies": {
+    "@ai-sdk/react": "^2.0.92",
     "@dnd-kit/core": "^6.3.1",
     "@dnd-kit/sortable": "^10.0.0",
     "@dnd-kit/utilities": "^3.2.2",
     "@hookform/resolvers": "^5.2.2",
+    "@nanostores/react": "ai/react",
     "@number-flow/react": "^0.5.10",
     "@radix-ui/react-avatar": "^1.1.10",
     "@radix-ui/react-checkbox": "^1.3.3",
@@ -29,7 +31,9 @@
     "@react-three/fiber": "^9.4.0",
     "@tanstack/react-query": "^5.90.2",
     "@tanstack/react-query-devtools": "^5.90.2",
+    "@vercel/blob": "^2.0.0",
     "@vite-pwa/assets-generator": "^1.0.1",
+    "ai": "^5.0.92",
     "animate.css": "^4.1.1",
     "axios": "^1.12.2",
     "class-variance-authority": "^0.7.1",
@@ -37,7 +41,10 @@
     "date-fns": "^4.1.0",
     "framer-motion": "^12.23.22",
     "gsap": "^3.13.0",
+    "highlight.js": "^11.11.1",
     "jsonwebtoken": "^9.0.2",
+    "katex": "^0.16.25",
+    "lowlight": "^3.3.0",
     "lucide-react": "^0.552.0",
     "motion": "^12.23.24",
     "next": "15.5.4",
@@ -45,15 +52,19 @@
     "next-intl": "^4.3.9",
     "next-themes": "^0.4.6",
     "nextjs-toploader": "^3.9.17",
+    "novel": "^1.0.2",
     "radix-ui": "^1.4.3",
     "react": "19.1.0",
     "react-dom": "19.1.0",
     "react-hook-form": "^7.65.0",
+    "react-markdown": "^10.1.0",
     "sharp": "^0.34.4",
     "sonner": "^2.0.7",
     "swiper": "^12.0.2",
     "tailwind-merge": "^3.3.1",
     "three": "^0.181.0",
+    "tiptap-markdown": "^0.9.0",
+    "use-debounce": "^10.0.6",
     "usehooks-ts": "^3.1.1",
     "zod": "^4.1.12",
     "zustand": "^5.0.8"
@@ -62,6 +73,7 @@
     "@eslint/eslintrc": "^3",
     "@svgr/webpack": "^8.1.0",
     "@tailwindcss/postcss": "^4",
+    "@tailwindcss/typography": "^0.5.19",
     "@types/jsonwebtoken": "^9.0.10",
     "@types/node": "^20",
     "@types/react": "^19",
